--- a/app/src/main/res/layout/activity_main_registar_user.xml
+++ b/app/src/main/res/layout/activity_main_registar_user.xml
@@ -43,7 +43,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
-                android:hint="Ingrese su Teléfono celular"
+                android:hint="Teléfono celular"
                 android:inputType="phone"
                 android:backgroundTint="#FFFFFF"
                 android:textColor="#ffffff"
@@ -55,7 +55,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
-                android:hint="Escriba su nombre"
+                android:hint="Nombre"
                 android:inputType="textPersonName"
                 app:layout_constraintBottom_toTopOf="@+id/etxt_lastname"
                 tools:layout_editor_absoluteX="0dp"
@@ -69,7 +69,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
-                android:hint="Escriba su apellido"
+                android:hint="Apellido"
                 android:inputType="textPersonName"
                 app:layout_constraintTop_toBottomOf="@+id/etxt_name"
                 android:backgroundTint="#FFFFFF"
@@ -82,7 +82,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/etxt_name"
                 android:layout_centerHorizontal="true"
-                android:hint="Escriba su email"
+                android:hint="Email"
                 android:inputType="textEmailAddress"
                 app:layout_constraintTop_toTopOf="@+id/etxt_lastname"
                 tools:layout_editor_absoluteX="0dp"
@@ -97,7 +97,7 @@
                 android:layout_below="@+id/etxt_email"
                 android:layout_alignEnd="@+id/etxt_email"
                 android:layout_alignRight="@+id/etxt_email"
-                android:hint="Escriba su password"
+                android:hint="@string/Contraseña"
                 android:inputType="textPassword"
                 app:layout_constraintTop_toTopOf="@+id/etxt_email"
                 tools:layout_editor_absoluteX="-16dp"
