--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,6 +8,31 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+        <style name="AppThemeBr" parent="Theme.AppCompat.Light">
+            <item name="colorPrimary">@color/colorPrimary</item>
+        </style>
+
+    <style name="SwitchTheme" parent="Theme.AppCompat.Light">
+        <item name="android:colorControlActivated">#148E13</item>
+        <item name="android:colorControlNormal">#FFF</item>
+            <item name="thumbTint">@color/GRAY</item>
+            <item name="trackTint">@color/whiteText</item>
+    </style>
+
+    <style name="buttonTransparent" parent="Base.TextAppearance.AppCompat.Button">
+        <item name="android:background">#00000000</item>
+        <item name="android:textColor">#000000</item>
+        <item name="android:textSize">18dp</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="borderWidth">0dp</item>
+        <item name="android:minHeight">45dp</item>
+    </style>
+    <style name="buttonLargeWhite" parent="buttonTransparent">
+        <item name="android:background">#FFF</item>
+        <item name="android:layout_marginTop">10dp</item>
+    </style>
+
+
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
