--- a/app/src/main/res/layout/fragment_mispeluquerosfragment.xml
+++ b/app/src/main/res/layout/fragment_mispeluquerosfragment.xml
@@ -38,8 +38,10 @@
                         android:textStyle="bold"/>
 
                     <ImageView
+                        android:id="@+id/editarBarberia"
                         android:layout_width="20dp"
                         android:layout_height="20dp"
+                        android:layout_gravity="center_vertical"
                         android:tint="@color/whiteText"
                         android:src="@drawable/ic_editar">
                     </ImageView>
@@ -76,13 +78,22 @@
                 android:text="Mis peluqueros   "
                 android:textColor="@color/whiteText"/>
             <ImageView
-                android:layout_width="15dp"
-                android:layout_height="15dp"
+                android:layout_width="11dp"
+                android:layout_height="11dp"
                 android:src="@drawable/agregar"
+                android:layout_gravity="center_vertical"
                 android:id="@+id/anadirPeluqueroaPeluqueriaBTN"
                 android:tint="@color/whiteText"/>
         </LinearLayout>
     </RelativeLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="15dp"
+        />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@color/whiteText"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/idRecycleMisPeluqueros"
