--- a/app/src/main/res/layout/fragment_anadirpeluqueroapeluqueria.xml
+++ b/app/src/main/res/layout/fragment_anadirpeluqueroapeluqueria.xml
@@ -9,11 +9,7 @@
     android:orientation="vertical"
     android:padding="20dp">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/whiteText"
-        android:text="Escriba el telefono para buscar"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -26,7 +22,7 @@
             android:textColorHint="@color/whiteText"
             android:layout_weight="1"
             android:textColor="@color/whiteText"
-            android:hint="Telefono"></EditText>
+            android:hint="Teléfono"></EditText>
         <Button
             android:id="@+id/butonBuscarBarbero"
             android:layout_width="25dp"
@@ -36,6 +32,18 @@
             android:background="@drawable/search"
             ></Button>
     </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="15dp"
+        />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@color/whiteText"/>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="15dp"
+        />
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/idRecycleBarberosAgregar"
         android:layout_width="match_parent"
