--- a/app/src/main/res/layout/fragment_mispeluquerosfragment.xml
+++ b/app/src/main/res/layout/fragment_mispeluquerosfragment.xml
@@ -57,6 +57,10 @@
     </RelativeLayout>
     <View
         android:layout_width="match_parent"
+        android:layout_height="15dp"
+        />
+    <View
+        android:layout_width="match_parent"
         android:layout_height="0.5dp"
         android:background="@color/whiteText"/>
     <View
