V 2.0 Inicio S y registro ok, Convertir Cl a adm Ok convertir/ anadir CL A barbero, ACOMODAMOS EL UPDATE, Desvincula el barbarbero, prueba de reservas

--- a/app/src/main/res/layout/fragment_barberoperfil.xml
+++ b/app/src/main/res/layout/fragment_barberoperfil.xml
@@ -75,7 +75,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/desasociarBr"
-            android:text="  Eliminar Barbero  "
+            android:text="  Desvincular Barbero  "
             android:background="@drawable/shapesred"/>
     </LinearLayout>
 
